// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Backspace > should correctly parse backspace 1`] = `
{
  "body": {
    "end": 4,
    "expressions": [
      {
        "end": 3,
        "kind": "Backspace",
        "start": 2,
      },
    ],
    "kind": "CharClass",
    "negative": false,
    "start": 1,
  },
  "end": 5,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;

exports[`Backspace > should correctly work, surronded by other characters 1`] = `
{
  "body": {
    "end": 6,
    "expressions": [
      {
        "charCode": 97,
        "end": 2,
        "kind": "Char",
        "start": 2,
        "type": "Simple",
        "value": "a",
      },
      {
        "end": 4,
        "kind": "Backspace",
        "start": 3,
      },
      {
        "charCode": 99,
        "end": 5,
        "kind": "Char",
        "start": 5,
        "type": "Simple",
        "value": "c",
      },
    ],
    "kind": "CharClass",
    "negative": false,
    "start": 1,
  },
  "end": 7,
  "flags": "",
  "kind": "Regexp",
  "start": 0,
}
`;
